<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        style="@style/Heading"
        android:text="@string/product_specification"/>

    <ke.co.toshngure.gikosh.view.SpecificationView
        android:id="@+id/sizeSV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:specificationName="@string/sizes"
        android:padding="@dimen/list_row_padding"
        app:specificationIcon="@drawable/ic_straighten_black_24dp"/>

    <ke.co.toshngure.gikosh.view.SpecificationView
        android:id="@+id/categorySV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:specificationName="@string/category"
        android:padding="@dimen/list_row_padding"
        app:specificationIcon="@drawable/ic_folder_black_24dp"/>

    <ke.co.toshngure.gikosh.view.SpecificationView
        android:id="@+id/brandSV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:specificationName="@string/brand"
        android:padding="@dimen/list_row_padding"
        app:specificationNoChipsText="@string/no_brand_added"
        app:specificationIcon="@drawable/ic_local_offer_black_24dp"/>

    <ke.co.toshngure.gikosh.view.SpecificationView
        android:id="@+id/conditionSV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:specificationName="@string/condition"
        android:padding="@dimen/list_row_padding"
        app:specificationIcon="@drawable/ic_info_black_24dp"/>

</LinearLayout>
