<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ke.co.toshngure.gikosh.activity.SellActivity"
    tools:showIn="@layout/activity_sell">

    <include layout="@layout/layout_fake_shadow" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/list_row_padding"
                android:orientation="vertical">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add_your_item_photos"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:textStyle="bold"
                    android:layout_marginBottom="@dimen/list_row_padding"/>

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fadeScrollbars="false"
                    android:scrollbarSize="2dp"
                    android:scrollbarThumbHorizontal="?attr/colorAccent">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="@dimen/list_row_padding">

                        <ke.co.toshngure.gikosh.view.ImagePicker
                            android:id="@+id/imagePicker1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                        <ke.co.toshngure.gikosh.view.ImagePicker
                            android:id="@+id/imagePicker2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                        <ke.co.toshngure.gikosh.view.ImagePicker
                            android:id="@+id/imagePicker3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                        <ke.co.toshngure.gikosh.view.ImagePicker
                            android:id="@+id/imagePicker4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                    </LinearLayout>

                </HorizontalScrollView>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_your_item_details"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textStyle="bold"
                android:layout_marginLeft="@dimen/list_row_padding"
                android:layout_marginStart="@dimen/list_row_padding"/>

            <android.support.v7.widget.CardView
                style="@style/CardViewContainer">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:id="@+id/nameMET"
                        style="@style/METProductDetails"
                        android:inputType="text|textCapSentences"
                        android:maxLines="1"
                        android:hint="@string/hint_item_name"
                        app:met_helperText="@string/helper_item_name"/>

                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:id="@+id/priceMET"
                        style="@style/METProductDetails"
                        android:inputType="phone"
                        android:hint="@string/hint_item_price"
                        android:layout_marginBottom="@dimen/list_row_padding"
                        app:met_helperText="@string/helper_item_price"/>

                    <TextView
                        style="@style/Heading"
                        android:text="@string/description"
                        android:layout_marginBottom="0dp"/>

                    <LinearLayout
                        android:id="@+id/descriptionLL"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackground"
                        android:layout_marginBottom="@dimen/list_row_padding"
                        android:paddingTop="@dimen/list_row_padding"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/descriptionTV"
                            style="@style/Body"
                            android:minHeight="?attr/actionBarSize"
                            android:gravity="center_vertical"
                            android:text="@string/helper_item_description"
                            android:layout_marginBottom="@dimen/list_row_padding"/>

                        <include layout="@layout/horizontal_separator"/>

                    </LinearLayout>

                    <include layout="@layout/layout_specifications"/>

                    <Button
                        android:id="@+id/previewBtn"
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/preview"
                        android:layout_marginTop="@dimen/list_row_padding"
                        android:layout_gravity="end"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>


        </LinearLayout>


    </android.support.v4.widget.NestedScrollView>

</LinearLayout>
