<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/activity_vertical_margin">

    <TextView
        style="@style/BaseApp.Heading"
        android:text="@string/select_item_type"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/buttonsLL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true">
            <Button
                android:id="@+id/nextBtn"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/continue_" />

            <ImageButton
                android:id="@+id/cancelBtn"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_clear_black_24dp"
                android:tint="@android:color/holo_red_dark"/>
        </LinearLayout>

        <TextView
            android:id="@+id/selectedCategoryTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/buttonsLL"
            android:layout_toStartOf="@id/buttonsLL"
            android:textAllCaps="true"/>


    </RelativeLayout>

    <include layout="@layout/horizontal_separator"/>

</LinearLayout>
