<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/list_row_padding">

        <TextView
            android:id="@+id/actionBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="?attr/selectableItemBackground"
            android:padding="@dimen/list_row_padding"
            android:text="@string/change"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textColor="?attr/colorAccent"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/actionBtn"
            android:layout_toStartOf="@id/actionBtn"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/iconIV"
                style="@style/BaseApp.Image"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_straighten_black_24dp" />

            <TextView
                android:id="@+id/nameTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/activity_vertical_margin"
                android:layout_marginLeft="@dimen/list_row_padding"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:layout_marginStart="@dimen/list_row_padding"
                android:text="@string/app_name"
                android:textAllCaps="true"
                android:textStyle="normal" />

        </LinearLayout>


    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp">

        <TextView
            android:id="@+id/noChipsTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/not_applicable"
            android:textColor="@android:color/holo_red_dark"/>

        <ke.co.toshngure.chipcloud.ChipCloud
            android:id="@+id/chipCloud"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:chipHeight="22dp"
            app:gravity="left"
            app:selectMode="required" />


    </FrameLayout>

</LinearLayout>