<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activity.SplashActivity">

    <com.synnapps.carouselview.CarouselView
        android:id="@+id/carouselView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:autoPlay="true"
        app:fillColor="?attr/colorAccent"
        app:indicatorGravity="center"
        app:pageColor="@android:color/transparent"
        app:radius="8dp"
        app:slideInterval="3000"
        app:strokeColor="@android:color/white"
        app:strokeWidth="2dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="?attr/actionBarSize"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:orientation="vertical">


        <Button
            android:id="@+id/signUpBtn"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/sign_up_with_phone" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/orTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:padding="@dimen/list_row_padding"
                android:text="@string/or"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/orTV"
                android:layout_toStartOf="@id/orTV"
                android:background="@android:color/white"/>


            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/orTV"
                android:layout_toRightOf="@id/orTV"
                android:background="@android:color/white"/>



        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/logoutButton"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="@dimen/list_row_padding"
                android:layout_marginStart="@dimen/list_row_padding"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" />

            <Button
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_toLeftOf="@id/logoutButton"
                android:layout_toStartOf="@id/logoutButton"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/sign_in_with_facebook" />


        </RelativeLayout>


    </LinearLayout>

</FrameLayout>
